db_read healthCheck working
